gitops/apps/n8n/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
      sectionName: https-internal
  hostnames:
    - workflow.internal.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - group: ""
          kind: Service
          name: n8n
          port: 5678
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-http-redirect
  namespace: n8n
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
      sectionName: http
  hostnames:
    - workflow.internal.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
